@@ -7,6 +7,7 @@ gem2deb (0.17) UNRELEASED; urgency=medium
       packaging, or -w/--overwrite was passed.
     - when acting on an existing source package, read the source package name
       from debian/changelog.
+    - always create test suite files to make dh-make-ruby idempotent
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 16 May 2015 22:51:18 -0300
 
